// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> should render 1`] = `
.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3.c3.c3.c3.c3 {
  z-index: 1100;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c6.c6.c6.c6.c6 {
  position: absolute;
  z-index: 1;
  padding: 4px;
  top: 4px;
  right: 4px;
  border-radius: 9999px;
}

.c6.c6.c6.c6.c6 backgroundColor action background primary {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,6%,94%,1);
  focus: hsla(216,4%,89%,1);
  active: hsla(216,4%,89%,1);
  disabled: hsla(210,6%,94%,0.18);
}

.c6.c6.c6.c6.c6 backgroundColor action background secondary {
  default: hsla(214,15%,18%,0);
  hover: hsla(210,6%,94%,0.18);
  focus: hsla(210,6%,94%,0.32);
  active: hsla(210,6%,94%,0.32);
  disabled: hsla(214,15%,18%,0);
}

.c6.c6.c6.c6.c6 backgroundColor action background tertiary {
  default: hsla(210,6%,94%,0.09);
  hover: hsla(210,6%,94%,0.18);
  focus: hsla(210,6%,94%,0.32);
  active: hsla(210,6%,94%,0.32);
  disabled: hsla(210,6%,94%,0.09);
}

.c6.c6.c6.c6.c6 backgroundColor action border primary {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,6%,94%,1);
  focus: hsla(216,4%,89%,1);
  active: hsla(216,4%,89%,1);
  disabled: hsla(210,6%,94%,0.18);
}

.c6.c6.c6.c6.c6 backgroundColor action border secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action border tertiary {
  default: hsla(214,15%,18%,0);
  hover: hsla(214,15%,18%,0);
  focus: hsla(214,15%,18%,0);
  active: hsla(214,15%,18%,0);
  disabled: hsla(214,15%,18%,0);
}

.c6.c6.c6.c6.c6 backgroundColor action text primary {
  default: hsla(218,89%,51%,1);
  hover: hsla(218,89%,51%,1);
  focus: hsla(218,89%,51%,1);
  active: hsla(218,89%,51%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text tertiary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text link {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,4%,89%,1);
  focus: hsla(214,7%,81%,1);
  active: hsla(214,7%,81%,1);
  disabled: hsla(210,6%,94%,0.32);
  visited: hsla(268,100%,79%,1);
}

.c6.c6.c6.c6.c6 backgroundColor action icon primary {
  default: hsla(218,89%,51%,1);
  hover: hsla(218,89%,51%,1);
  focus: hsla(218,89%,51%,1);
  active: hsla(218,89%,51%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon tertiary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon link {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,4%,89%,1);
  focus: hsla(214,7%,81%,1);
  active: hsla(214,7%,81%,1);
  disabled: hsla(210,6%,94%,0.32);
  visited: hsla(268,100%,79%,1);
}

.c4.c4.c4.c4.c4 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: #FFFFFF;
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
}

.c7.c7.c7.c7.c7 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(214,18%,69%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7.c7.c7.c7.c7:hover {
  color: hsla(217,18%,45%,1);
}

.c7.c7.c7.c7.c7:focus-visible {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(217,18%,45%,1);
}

.c7.c7.c7.c7.c7:active {
  color: hsla(217,18%,45%,1);
}

.c2.c2.c2.c2.c2 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<body>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls=":r0:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c1"
        data-blade-component="base-box"
        opacity="1"
      >
        <div
          class="c2"
          data-blade-component="base-text"
        >
          Click me
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r2:"
  >
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-1"
      class="c3"
      data-blade-component="popover"
      id=":r0:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(4px, -11px);"
      tabindex="-1"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <button
              aria-label="Close"
              class="c7"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class=""
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="#FFFFFF"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%; left: 14px;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r3:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(216, 19%, 89%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="#FFFFFF"
          />
          <clippath
            id=":r3:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<Popover /> should render popover with custom zIndex 1`] = `
.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3.c3.c3.c3.c3 {
  z-index: 9999;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c6.c6.c6.c6.c6 {
  position: absolute;
  z-index: 1;
  padding: 4px;
  top: 4px;
  right: 4px;
  border-radius: 9999px;
}

.c6.c6.c6.c6.c6 backgroundColor action background primary {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,6%,94%,1);
  focus: hsla(216,4%,89%,1);
  active: hsla(216,4%,89%,1);
  disabled: hsla(210,6%,94%,0.18);
}

.c6.c6.c6.c6.c6 backgroundColor action background secondary {
  default: hsla(214,15%,18%,0);
  hover: hsla(210,6%,94%,0.18);
  focus: hsla(210,6%,94%,0.32);
  active: hsla(210,6%,94%,0.32);
  disabled: hsla(214,15%,18%,0);
}

.c6.c6.c6.c6.c6 backgroundColor action background tertiary {
  default: hsla(210,6%,94%,0.09);
  hover: hsla(210,6%,94%,0.18);
  focus: hsla(210,6%,94%,0.32);
  active: hsla(210,6%,94%,0.32);
  disabled: hsla(210,6%,94%,0.09);
}

.c6.c6.c6.c6.c6 backgroundColor action border primary {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,6%,94%,1);
  focus: hsla(216,4%,89%,1);
  active: hsla(216,4%,89%,1);
  disabled: hsla(210,6%,94%,0.18);
}

.c6.c6.c6.c6.c6 backgroundColor action border secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action border tertiary {
  default: hsla(214,15%,18%,0);
  hover: hsla(214,15%,18%,0);
  focus: hsla(214,15%,18%,0);
  active: hsla(214,15%,18%,0);
  disabled: hsla(214,15%,18%,0);
}

.c6.c6.c6.c6.c6 backgroundColor action text primary {
  default: hsla(218,89%,51%,1);
  hover: hsla(218,89%,51%,1);
  focus: hsla(218,89%,51%,1);
  active: hsla(218,89%,51%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text tertiary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action text link {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,4%,89%,1);
  focus: hsla(214,7%,81%,1);
  active: hsla(214,7%,81%,1);
  disabled: hsla(210,6%,94%,0.32);
  visited: hsla(268,100%,79%,1);
}

.c6.c6.c6.c6.c6 backgroundColor action icon primary {
  default: hsla(218,89%,51%,1);
  hover: hsla(218,89%,51%,1);
  focus: hsla(218,89%,51%,1);
  active: hsla(218,89%,51%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon secondary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon tertiary {
  default: hsla(0,0%,100%,1);
  hover: hsla(0,0%,100%,1);
  focus: hsla(0,0%,100%,1);
  active: hsla(0,0%,100%,1);
  disabled: hsla(210,6%,94%,0.32);
}

.c6.c6.c6.c6.c6 backgroundColor action icon link {
  default: hsla(0,0%,100%,1);
  hover: hsla(216,4%,89%,1);
  focus: hsla(214,7%,81%,1);
  active: hsla(214,7%,81%,1);
  disabled: hsla(210,6%,94%,0.32);
  visited: hsla(268,100%,79%,1);
}

.c4.c4.c4.c4.c4 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: #FFFFFF;
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c7.c7.c7.c7.c7 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(214,18%,69%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c7.c7.c7.c7.c7:hover {
  color: hsla(217,18%,45%,1);
}

.c7.c7.c7.c7.c7:focus-visible {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(217,18%,45%,1);
}

.c7.c7.c7.c7.c7:active {
  color: hsla(217,18%,45%,1);
}

.c2.c2.c2.c2.c2 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<body>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls=":r8:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c1"
        data-blade-component="base-box"
        opacity="1"
      >
        <div
          class="c2"
          data-blade-component="base-text"
        >
          Click me
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":ra:"
  >
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-18"
      class="c3"
      data-blade-component="popover"
      id=":r8:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <button
              aria-label="Close"
              class="c7"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class=""
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="#FFFFFF"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:rb:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(216, 19%, 89%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="#FFFFFF"
          />
          <clippath
            id=":rb:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<Popover /> should render with title,footer 1`] = `
.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3.c3.c3.c3.c3 {
  z-index: 1100;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  gap: 12px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c7.c7.c7.c7.c7 {
  padding-right: 12px;
}

.c9.c9.c9.c9.c9 {
  margin-left: auto;
}

.c4.c4.c4.c4.c4 {
  width: 100%;
  max-width: 328px;
  position: relative;
  background-color: #FFFFFF;
  border-width: 1px;
  border-radius: 8px;
  border-color: hsla(216,19%,89%,1);
  border-style: solid;
  box-shadow: 0 12px 16px -4px hsla(217,56%,17%,0.08),0 4px 6px -2px hsla(217,56%,17%,0.03);
  opacity: 0;
  -webkit-transform: translateY(4px);
  -ms-transform: translateY(4px);
  transform: translateY(4px);
}

.c10.c10.c10.c10.c10 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(214,18%,69%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  color: hsla(217,18%,45%,1);
}

.c10.c10.c10.c10.c10:focus-visible {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(217,18%,45%,1);
}

.c10.c10.c10.c10.c10:active {
  color: hsla(217,18%,45%,1);
}

.c2.c2.c2.c2.c2 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(230,100%,42%,1);
  border-color: hsla(230,100%,42%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
  outline: 1px solid hsla(220,30%,96%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

<body>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls=":r4:"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="c0"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class="c1"
        data-blade-component="base-box"
        opacity="1"
      >
        <div
          class="c2"
          data-blade-component="base-text"
        >
          Click me
        </div>
      </div>
    </button>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r6:"
  >
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
    <div
      aria-labelledby="popover-title-11"
      class="c3"
      data-blade-component="popover"
      id=":r4:"
      role="dialog"
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
              id="popover-title-11"
            >
              <h6
                class="c8"
                data-blade-component="heading"
              >
                This is title
              </h6>
            </div>
            <div
              class="c9"
              data-blade-component="base-box"
            >
              <button
                aria-label="Close"
                class="c10"
                data-blade-component="icon-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="20px"
                  viewBox="0 0 24 24"
                  width="20px"
                >
                  <path
                    d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                    data-blade-component="svg-path"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c11"
              data-blade-component="text"
            >
              Hello world
            </p>
          </div>
          <div
            class=""
            data-blade-component="base-box"
          >
            <p
              class="c11"
              data-blade-component="text"
            >
              Footer
            </p>
          </div>
        </div>
        <svg
          aria-hidden="true"
          fill="#FFFFFF"
          height="14"
          style="position: absolute; pointer-events: none; top: 100%;"
          viewBox="0 0 14 14"
          width="16"
        >
          <path
            clip-path="url(#:r7:)"
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            fill="none"
            stroke="hsla(216, 19%, 89%, 1)"
            stroke-width="3"
          />
          <path
            d="M0,0 H14 L7,7 Q7,7 7,7 Z"
            stroke="#FFFFFF"
          />
          <clippath
            id=":r7:"
          >
            <rect
              height="14"
              width="16"
              x="-1"
              y="1"
            />
          </clippath>
        </svg>
      </div>
    </div>
    <span
      aria-hidden="true"
      data-aria-hidden="true"
      data-floating-ui-focus-guard=""
      data-type="inside"
      role="button"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
      tabindex="0"
    />
  </div>
</body>
`;
